--- a/css/main.css
+++ b/css/main.css
@@ -2,6 +2,22 @@
     /*background: #f1f1f1;*/
 /*}*/
 
-/*.main {*/
-    /*background: #f1f1f1;*/
-/*}*/
+.main {
+    background: #f1f1f1;
+    width: 100%;
+    height: 70vh;
+}
+
+.main1 {
+    background: #f1f1f1;
+    width: 100%;
+    height: 100vh;
+}
+
+.footer {
+    background: cornflowerblue;
+    width: 100%;
+    height: 45vh;
+}
+
+.box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
