Feature: add profile picture to the main content

--- a/css/main.css
+++ b/css/main.css
@@ -21,3 +21,13 @@
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
+
+#pic {
+    border-radius: 50%;
+    position: absolute;
+    margin: auto;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
