--- a/css/main.css
+++ b/css/main.css
@@ -18,6 +18,7 @@
     background: cornflowerblue;
     width: 100%;
     height: 45vh;
+    //position: relative;
 }
 
 .box-shadow { box-shadow: 0 .25rem .75rem rgba(0, 0, 0, .05); }
@@ -30,4 +31,36 @@
     left: 0;
     right: 0;
     bottom: 0;
+}
+
+#column1 {
+    margin-top: 8px;
+    width: 33%;
+    float: left;
+}
+#column2 {
+    margin-top: 8px;
+    width: 33%;
+    float: left;
+}
+#column3 {
+    margin-top: 8px;
+    width: 33%;
+    float: left;
+
+}
+
+#about {
+    font-size: 50px;
+    margin-bottom: 8px;
+}
+
+#skills {
+    font-size: 50px;
+    margin-bottom: 8px;
+}
+
+#projects {
+    font-size: 50px;
+    margin-bottom: 8px;
 }
